fix default message alignment for mobile

--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ textarea {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 #defaultImage {
@@ -190,7 +191,7 @@ textarea {
     }
 
     .default__text {
-        margin: 0;
+        margin: 0 0 1rem 0;
     }
 
     #defaultImage {
